--- a/book/css/style.css
+++ b/book/css/style.css
@@ -574,3 +574,8 @@ body {
   background-color: #0a0a25 !important;
 
 }
+.btn-check:focus+.btn, .btn:focus {
+  outline: 0;
+  box-shadow:none !important;
+  color: #000 !important;
+}
