--- a/book/css/style.css
+++ b/book/css/style.css
@@ -564,6 +564,9 @@ body {
   .px-5 {
     padding: 0 !important;
   }
+  li.nav-item a{
+    font-size:14px !important;
+  }
 }
 .list-group-item{
   
